--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="keywords" content="classical">
 <link rel="stylesheet" href="style.css" type="text/css" media="screen">
-<TITLE>Ilja Kuzborskij</TITLE>
+<TITLE>Yuanhe Zhang</TITLE>
 
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-WRP0YZ98JR"></script>
