--- a/index.html
+++ b/index.html
@@ -102,12 +102,13 @@
       International Conference on Machine Learning (<a href="https://icml.cc/Conferences/2025">ICML</a>), 2025
       <em>(to appear)</em>.<br/>
 
-      <a href="https://arxiv.org/abs/2502.01235">[PDF]</a>&ensp;
+      <a href="https://arxiv.org/pdf/2502.01235">[PDF]</a>&ensp;
       <a href="javascript:toggle('zhang2025loraoneonestepgradientsuffice_wrap');">[Bibtex]</a>&ensp;
       <div id="zhang2025loraoneonestepgradientsuffice_wrap" class="bibpanel">
 	<PRE id="zhang2025loraoneonestepgradientsuffice">
 @misc{zhang2025loraoneonestepgradientsuffice,
-      title={LoRA-One: One-Step Full Gradient Could Suffice for Fine-Tuning Large Language Models, Provably and Efficiently}, 
+      title={LoRA-One: One-Step Full Gradient Could Suffice for Fine-Tuning Large Language Models,
+	     Provably and Efficiently}, 
       author={Yuanhe Zhang and Fanghui Liu and Yudong Chen},
       year={2025},
       eprint={2502.01235},
@@ -128,7 +129,7 @@
       Advances in Neural Information Processing Systems (<a href="https://neurips.cc/Conferences/2024">NeurIPS</a>), 2024.
       <br/>
 
-      <a href="https://arxiv.org/abs/2406.12764">[PDF]</a>&ensp;
+      <a href="https://proceedings.neurips.cc/paper_files/paper/2024/file/47482e8241e820bfcb1c599b3009c90d-Paper-Conference.pdf">[PDF]</a>&ensp;
       <a href="javascript:toggle('huk2024quasi_wrap');">[Bibtex]</a>&ensp;
       <div id="huk2024quasi_wrap" class="bibpanel">
 	<PRE id="huk2024quasi">
