--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <p>
       <br/>
-      I am a PhD student in Statistics at University of Warwick, under the supervison of 
+      I am a PhD student in Statistics at University of Warwick, supervised by 
       <a href="https://www.lfhsgre.org" target="_blank">Dr. Fanghui Liu</a> 
       and 
       <a href="https://warwick.ac.uk/fac/sci/statistics/staff/academic-research/leng" target="_blank">Prof. Chenlei Leng</a>.
@@ -108,7 +108,7 @@
 	<PRE id="zhang2025loraoneonestepgradientsuffice">
 @misc{zhang2025loraoneonestepgradientsuffice,
       title={LoRA-One: One-Step Full Gradient Could Suffice for Fine-Tuning Large Language Models,
-	     Provably and Efficiently}, 
+      Provably and Efficiently}, 
       author={Yuanhe Zhang and Fanghui Liu and Yudong Chen},
       year={2025},
       eprint={2502.01235},
