--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 </HEAD>
 <BODY>
-<div id="maincontainer" class="center-screen">
+<div class="bio-container">
   <div class="bio-text">
     <p>
       <br/>
