--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </p>
   </div>
   <div>
-    <img src="cool_guy.jpg" alt="Profile picture" class="bio-image">
+    <img src="img/cool_guy.jpg" alt="Profile picture" class="bio-image">
   </div>
 </div>
 
