--- a/index.html
+++ b/index.html
@@ -59,28 +59,17 @@
 }
 </script>
 
-<style>
-  .bio-container {
-    display: flex;
-    align-items: flex-start; /* Align image and text at the top */
-    gap: 20px; /* Space between text and image */
-  }
 
-  .bio-text {
-    flex: 1; /* Takes remaining space */
-  }
-
-  .bio-image {
-    max-width: 200px;
-    height: auto;
-    border-radius: 8px; /* Optional: rounded corners */
-  }
-</style>
-
+	
 </HEAD>
 <BODY>
-<div class="bio-container">
-  <div class="bio-text">
+<div id="maincontainer" class="center-screen">
+
+  <div id="contentcontainer">
+    <div id="yourname" title="Yuanhe Zhang">
+      Yuanhe Zhang
+    </div>
+
     <p>
       <br/>
       I am a PhD student in Statistics at University of Warwick, supervised by 
@@ -94,11 +83,6 @@
       <br/>
       You can contact me at firstname.lastname@warwick.ac.uk
     </p>
-  </div>
-  <div>
-    <img src="img/cool_guy.jpg" alt="Profile picture" class="bio-image">
-  </div>
-</div>
 
 
 
