--- a/index.html
+++ b/index.html
@@ -6,83 +6,73 @@
 <meta name="keywords" content="classical">
 <link rel="stylesheet" href="style.css" type="text/css" media="screen">
 <TITLE>Yuanhe Zhang</TITLE>
-
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-WRP0YZ98JR"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'G-WRP0YZ98JR');
 </script>
-
 <script language="javascript">
-
-
   function toggle(id) {
-  var ele = document.getElementById(id);
-  var text = document.getElementById("displayText");
-  if(ele.style.display == "block") {
-  ele.style.display = "none";
-  }
-  else {
-  ele.style.display = "block";
-  }
-  }
-
-  function SelectText(element) {
-    var doc = document
-	, text = doc.getElementById(element)
-	, range, selection
-    ;
-    if (doc.body.createTextRange) {
-	range = document.body.createTextRange();
-	range.moveToElementText(text);
-	range.select();
-    } else if (window.getSelection) {
-	selection = window.getSelection();
-	range = document.createRange();
-	range.selectNodeContents(text);
-	selection.removeAllRanges();
-	selection.addRange(range);
+    var ele = document.getElementById(id);
+    var text = document.getElementById("displayText");
+    if(ele.style.display == "block") {
+      ele.style.display = "none";
+    } else {
+      ele.style.display = "block";
     }
   }
-
+  function SelectText(element) {
+    var doc = document,
+    text = doc.getElementById(element),
+    range, selection;
+    if (doc.body.createTextRange) {
+      range = document.body.createTextRange();
+      range.moveToElementText(text);
+      range.select();
+    } else if (window.getSelection) {
+      selection = window.getSelection();
+      range = document.createRange();
+      range.selectNodeContents(text);
+      selection.removeAllRanges();
+      selection.addRange(range);
+    }
+  }
   function copyBibliography(id) {
     var content = document.getElementById(id);
-    navigator.clipboard.writeText(content.innerText).then(function() {
-
-    }).catch(function(error) {
-	alert('Error copying text: ' + error);
+    navigator.clipboard.writeText(content.innerText).catch(function(error) {
+      alert('Error copying text: ' + error);
     });
-}
+  }
 </script>
-
-
-	
 </HEAD>
 <BODY>
 <div id="maincontainer" class="center-screen">
-
   <div id="contentcontainer">
     <div id="yourname" title="Yuanhe Zhang">
       Yuanhe Zhang
     </div>
 
-    <p>
-      <br/>
-      I am a PhD student in Statistics at University of Warwick, supervised by 
-      <a href="https://www.lfhsgre.org" target="_blank">Dr. Fanghui Liu</a> 
-      and 
-      <a href="https://warwick.ac.uk/fac/sci/statistics/staff/academic-research/leng" target="_blank">Prof. Chenlei Leng</a>.
-      <br/>
-      <br/>
-      I am interested in theory-grounded algorithm design and theoretical analysis of the training dynamics of neural networks.
-      <br/>
-      <br/>
-      You can contact me at firstname.lastname@warwick.ac.uk
-    </p>
+    <div style="display: flex; align-items: flex-start; gap: 20px;">
+      <div style="flex: 1;">
+        <p>
+          <br/>
+          I am a PhD student in Statistics at University of Warwick, supervised by 
+          <a href="https://www.lfhsgre.org" target="_blank">Dr. Fanghui Liu</a> 
+          and 
+          <a href="https://warwick.ac.uk/fac/sci/statistics/staff/academic-research/leng" target="_blank">Prof. Chenlei Leng</a>.
+          <br/><br/>
+          I am interested in theory-grounded algorithm design and theoretical analysis of the training dynamics of neural networks.
+          <br/><br/>
+          You can contact me at firstname.lastname@warwick.ac.uk
+        </p>
+      </div>
+      <div style="flex-shrink: 0;">
+        <img src="img/cool_guy.jpg" alt="Yuanhe Zhang Photo" style="width: 150px; border-radius: 10px;"/>
+      </div>
+    </div>
 
 
 
