--- a/index.html
+++ b/index.html
@@ -49,30 +49,28 @@
 </script>
 </HEAD>
 <BODY>
-<div id="maincontainer" class="center-screen">
-  <div id="contentcontainer">
-    <div id="yourname" title="Yuanhe Zhang">
-      Yuanhe Zhang
-    </div>
+<div id="maincontainer">
+    <div id="contentcontainer">
+        <div id="yourname">Yuanhe Zhang</div>
 
-    <div style="display: flex; align-items: flex-start; gap: 20px;">
-      <div style="flex: 1;">
-        <p>
-          <br/>
-          I am a PhD student in Statistics at University of Warwick, supervised by 
-          <a href="https://www.lfhsgre.org" target="_blank">Dr. Fanghui Liu</a> 
-          and 
-          <a href="https://warwick.ac.uk/fac/sci/statistics/staff/academic-research/leng" target="_blank">Prof. Chenlei Leng</a>.
-          <br/><br/>
-          I am interested in theory-grounded algorithm design and theoretical analysis of the training dynamics of neural networks.
-          <br/><br/>
-          You can contact me at firstname.lastname@warwick.ac.uk
-        </p>
-      </div>
-      <div style="flex-shrink: 0;">
-        <img src="img/cool_guy.jpg" alt="Yuanhe Zhang Photo" style="width: 150px; border-radius: 10px;"/>
-      </div>
-    </div>
+        <div style="display: flex; flex-wrap: wrap; gap: 20px; align-items: flex-start;">
+            <div style="flex: 1; min-width: 250px;">
+                <p>
+                    <br>
+                    I am a PhD student in Statistics at University of Warwick, supervised by
+                    <a href="https://www.lfhsgre.org" target="_blank">Dr. Fanghui Liu</a>
+                    and
+                    <a href="https://warwick.ac.uk/fac/sci/statistics/staff/academic-research/leng" target="_blank">Prof. Chenlei Leng</a>.
+                    <br><br>
+                    I am interested in theory-grounded algorithm design and theoretical analysis of the training dynamics of neural networks.
+                    <br><br>
+                    You can contact me at firstname.lastname@warwick.ac.uk
+                </p>
+            </div>
+            <div style="flex-shrink: 0;">
+                <img src="img/cool_guy.jpg" alt="Yuanhe Zhang Photo" style="width: 150px; border-radius: 10px;">
+            </div>
+        </div>
 
 
 
