--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     You can contact me at firstname.lastname@warwick.ac.uk
                 </p>
             </div>
-            <div style="flex-shrink: 0;">
+            <div style="flex: 0 0 auto; margin-left: 30px; padding-top: 80px;">
                 <img src="img/cool_guy.jpg" alt="Yuanhe Zhang Photo" style="width: 150px; border-radius: 10px;">
             </div>
         </div>
