--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
 	<b>LoRA-One: One-Step Full Gradient Could Suffice for Fine-Tuning Large Language Models, Provably and Efficiently</b>
       </a>
       <br/>
+      <img src="img/loss-landscape.gif" alt="LoRA Animation" style="margin-top: 10px; max-width: 100%; height: auto; border-radius: 8px;"/>
+      <br/>
+      <br/>
       Yuanhe Zhang, Fanghui Liu, Yudong Chen
       <br/>
       International Conference on Machine Learning (<a href="https://icml.cc/Conferences/2025">ICML</a>), 2025
