--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 	<b>LoRA-One: One-Step Full Gradient Could Suffice for Fine-Tuning Large Language Models, Provably and Efficiently</b>
       </a>
       <br/>
-      <img src="img/loss-landscape.gif" alt="LoRA Animation" style="margin-top: 10px; max-width: 100%; height: auto; border-radius: 8px;"/>
+      <img src="img/loss_landscape.gif" alt="LoRA Animation" style="margin-top: 10px; max-width: 100%; height: auto; border-radius: 8px;"/>
       <br/>
       <br/>
       Yuanhe Zhang, Fanghui Liu, Yudong Chen
