--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
       <a href="https://arxiv.org/abs/2502.01235">
 	<b>LoRA-One: One-Step Full Gradient Could Suffice for Fine-Tuning Large Language Models, Provably and Efficiently</b>
       </a>
-      <br/>
-      <img src="img/loss_landscape.gif" alt="LoRA Animation" style="margin-top: 10px; max-width: 80%; height: auto; border-radius: 8px;"/>
-      <br/>
+      <div style="text-align: center; margin-top: 1em;">
+        <img src="loss_landscape.gif" alt="LoRA-One Demo Animation" style="max-width: 60%; height: auto;"/>
+      </div>
       <br/>
       Yuanhe Zhang, Fanghui Liu, Yudong Chen
       <br/>
