--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 	<b>LoRA-One: One-Step Full Gradient Could Suffice for Fine-Tuning Large Language Models, Provably and Efficiently</b>
       </a>
       <div style="text-align: center; margin-top: 1em;">
-        <img src="loss_landscape.gif" alt="LoRA-One Demo Animation" style="max-width: 60%; height: auto;"/>
+        <img src="img/loss_landscape.gif" alt="LoRA-One Demo Animation" style="max-width: 60%; height: auto;"/>
       </div>
       <br/>
       Yuanhe Zhang, Fanghui Liu, Yudong Chen
