--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <br><br>
                     I am interested in theory-grounded algorithm design and theoretical analysis of the training dynamics of neural networks.
                     <br><br>
-                    You can contact me at firstname.lastname@warwick.ac.uk
+                    Email: firstname.lastname@warwick.ac.uk
                 </p>
             </div>
             <div style="flex: 0 0 auto; margin-left: 10px; padding-top: 50px;">
