--- a/index.html
+++ b/index.html
@@ -79,10 +79,7 @@
 
     <h2>Publications</h2>
 
-    <div class="container">
-      <span class="tag"><b>Spotlight</b></span>
     <p>
-
       <a href="https://arxiv.org/abs/2502.01235">
 	<b>LoRA-One: One-Step Full Gradient Could Suffice for Fine-Tuning Large Language Models, Provably and Efficiently</b>
       </a>
@@ -93,7 +90,7 @@
       Yuanhe Zhang, Fanghui Liu, Yudong Chen
       <br/>
       International Conference on Machine Learning (<a href="https://icml.cc/Conferences/2025">ICML</a>), 2025
-      <em>(to appear)</em>.<br/>
+      <em>(Spotlight, to appear)</em>.<br/>
 
       <a href="https://arxiv.org/pdf/2502.01235">[PDF]</a>&ensp;
       <a href="https://github.com/YuanheZ/LoRA-One">[Code]</a>&ensp;
