--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
                 <p>
                     <br>
                     I am a PhD student in Statistics at University of Warwick, supervised by
-                    <a href="https://www.lfhsgre.org" target="_blank" style="color: grey;>Dr. Fanghui Liu</a>
+                    <a href="https://www.lfhsgre.org" target="_blank">Dr. Fanghui Liu</a>
                     and
-                    <a href="https://warwick.ac.uk/fac/sci/statistics/staff/academic-research/leng" target="_blank" style="color: grey;>Prof. Chenlei Leng</a>.
+                    <a href="https://warwick.ac.uk/fac/sci/statistics/staff/academic-research/leng" target="_blank">Prof. Chenlei Leng</a>.
                     <br><br>
                     I am interested in theory-grounded algorithm design and theoretical analysis of the training dynamics of neural networks.
                     <br><br>
