--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 	  </p>
       </div>
 
-
+<div id="education">
     <h2>Education</h2>
     <ul>
       <li>
@@ -153,7 +153,7 @@
         2020-2024
       </li>
     </ul>
-  </div>
+</div>
 
 
 
