--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
 
 
     <h2>Publications</h2>
-
+	    
+    <div class="container">
+      <span class="tag"><b>New</b></span>
     <p>
       <a href="https://arxiv.org/abs/2502.01235">
 	<b>LoRA-One: One-Step Full Gradient Could Suffice for Fine-Tuning Large Language Models, Provably and Efficiently</b>
