--- a/index.html
+++ b/index.html
@@ -86,10 +86,11 @@
 	<b>LoRA-One: One-Step Full Gradient Could Suffice for Fine-Tuning Large Language Models, Provably and Efficiently</b>
       </a>
       <div style="text-align: center; margin-top: 1em;">
-        <img src="img/loss_landscape.gif" alt="LoRA-One Demo Animation" style="max-width: 55%; height: auto;"/>
+        <img src="img/loss_landscape.gif" alt="LoRA-One Demo Animation" style="max-width: 60%; height: auto;"/>
       </div>
       <br/>
-      Yuanhe Zhang, Fanghui Liu, Yudong Chen
+      Yuanhe Zhang, Fanghui Liu, 
+      <a href="https://pages.cs.wisc.edu/~yudongchen" target="_blank">Yudong Chen</a>
       <br/>
       International Conference on Machine Learning (<a href="https://icml.cc/Conferences/2025">ICML</a>), 2025
       <em>(Spotlight, to appear)</em>.<br/>
