--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <a href="https://pages.cs.wisc.edu/~yudongchen" target="_blank">Yudong Chen</a>
       <br/>
       International Conference on Machine Learning (<a href="https://icml.cc/Conferences/2025">ICML</a>), 2025
-      <em>(Spotlight, to appear)</em>.<br/>
+      <em>(Oral, top 120/12107=1.0% of papers)</em>.<br/>
 
       <a href="https://arxiv.org/pdf/2502.01235">[PDF]</a>&ensp;
       <a href="https://github.com/YuanheZ/LoRA-One">[Code]</a>&ensp;
