--- a/index.html
+++ b/index.html
@@ -66,9 +66,10 @@
                 <p>
                     <br>
                     I am a PhD student in Statistics at University of Warwick, supervised by
-                    <a href="https://www.lfhsgre.org" target="_blank">Dr. Fanghui Liu</a>
+                    <a href="https://www.lfhsgre.org" target="_blank">Dr. Fanghui Liu</a>,
+					<a href="https://thomasberrett.github.io" target="_blank">Dr. Thomas Berrett</a>,
                     and
-                    <a href="https://warwick.ac.uk/fac/sci/statistics/staff/academic-research/leng" target="_blank">Prof. Chenlei Leng</a>.
+                    <a href="https://chenlei-leng.github.io" target="_blank">Prof. Chenlei Leng</a>.
                     <br><br>
                     I am interested in theory-grounded algorithm design and theoretical analysis of the training dynamics of neural networks.
                     <br><br>
@@ -151,9 +152,10 @@
       <li>
         <strong>PhD in Statistics</strong>, University of Warwick<br/>
         Supervised by 
-        <a href="https://www.lfhsgre.org" target="_blank">Dr. Fanghui Liu</a> 
+        <a href="https://www.lfhsgre.org" target="_blank">Dr. Fanghui Liu</a>,
+		<a href="https://thomasberrett.github.io" target="_blank">Dr. Thomas Berrett</a>,
         and 
-        <a href="https://warwick.ac.uk/fac/sci/statistics/staff/academic-research/leng" target="_blank">Prof. Chenlei Leng</a><br/>
+        <a href="https://chenlei-leng.github.io" target="_blank">Prof. Chenlei Leng</a><br/>
         <em>2024-Current</em>
       </li>
       <li>
