--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     and
                     <a href="https://chenlei-leng.github.io" target="_blank">Prof. Chenlei Leng</a>.
                     <br><br>
-                    I am interested in theory-grounded algorithm design and theoretical analysis of the training dynamics of neural networks.
+                    I am interested in theory-grounded algorithm design and theoretical analysis of the training dynamics of neural networks. <a href="docs/Yuanhe_New_CV.pdf" title="pdf">[CV]</a>
                     <br><br>
                     Email: firstname.lastname@warwick.ac.uk
                 </p>
