--- a/index.html
+++ b/index.html
@@ -91,16 +91,16 @@
     <div class="container">
       <span class="tag"><b>New</b></span>
     <p>
-      <a href="https://openreview.net/pdf/c78bca597ef8b93c12e18eadefbe6157ecd4586c.pdf">
+      <a href="https://arxiv.org/abs/2510.19842">
 	<b>DAG-Math: Graph-Guided Mathematical Reasoning in LLMs</b>
       </a>
       <br/>
       Yuanhe Zhang, Ilja Kuzborskij, Jason D. Lee, Chenlei Leng, Fanghui Liu
 	  </a>
       <br/>
-      <a href="https://openreview.net/pdf/c78bca597ef8b93c12e18eadefbe6157ecd4586c.pdf">[PDF]</a>&ensp;
+      <a href="docs/dag_math_pdf.pdf">[PDF]</a>&ensp;
       <a href="https://github.com/YuanheZ/DAG-MATH-Formatted-CoT">[Code]</a>&ensp;
-		
+
     <p>
       <a href="https://arxiv.org/abs/2502.01235">
 	<b>LoRA-One: One-Step Full Gradient Could Suffice for Fine-Tuning Large Language Models, Provably and Efficiently</b>
