--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 	<b>DAG-Math: Graph-Guided Mathematical Reasoning in LLMs</b>
       </a>
       <br/>
-      Yuanhe Zhang, Ilja Kuzborskij, Jason D. Lee, Chenlei Leng, Fanghui Liu
+      Yuanhe Zhang, <a href="https://iljaku.github.io" target="_blank">Ilja Kuzborskij</a>, <a href="https://jasondlee88.github.io" target="_blank">Jason D. Lee</a>, Chenlei Leng, Fanghui Liu
 	  </a>
       <br/>
       <a href="docs/dag_math_pdf.pdf">[PDF]</a>&ensp;
