--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
       <br/>
       Yuanhe Zhang, <a href="https://iljaku.github.io" target="_blank">Ilja Kuzborskij</a>, <a href="https://jasondlee88.github.io" target="_blank">Jason D. Lee</a>, Chenlei Leng, Fanghui Liu
 	  </a>
+	  <br/>
+	  International Conference on Learning Representations (ICLR), 2026
       <br/>
       <a href="docs/dag_math_pdf.pdf">[PDF]</a>&ensp;
       <a href="https://github.com/YuanheZ/DAG-MATH-Formatted-CoT">[Code]</a>&ensp;
