--- a/index.html
+++ b/index.html
@@ -89,6 +89,20 @@
     <h2>Publications</h2>
 	    
     <div class="container">
+	  <span class="tag"><b>New</b></span>
+    <p>
+      <a href="https://arxiv.org/abs/2602.02285">
+	<b>Statistical Learning Theory in Lean 4: Empirical Processes from Scratch</b>
+      </a>
+      <br/>
+      Yuanhe Zhang, <a href="https://jasondlee88.github.io" target="_blank">Jason D. Lee</a>, Fanghui Liu
+	  </a>
+	  <br/>
+	  Preprint
+      <br/>
+      <a href="docs/lean4_slt.pdf">[PDF]</a>&ensp;
+      <a href="https://github.com/YuanheZ/lean-stat-learning-theory">[Code]</a>&ensp;
+		
       <span class="tag"><b>New</b></span>
     <p>
       <a href="https://arxiv.org/abs/2510.19842">
