--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 	  <br/>
 	  Preprint
       <br/>
-      <a href="docs/lean4_slt.pdf">[PDF]</a>&ensp;
+      <a href="docs/lean4-slt.pdf">[PDF]</a>&ensp;
       <a href="https://github.com/YuanheZ/lean-stat-learning-theory">[Code]</a>&ensp;
 	</p>
 
