--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
       <br/>
       <a href="docs/lean4-slt.pdf">[PDF]</a>&ensp;
       <a href="https://github.com/YuanheZ/lean-stat-learning-theory">[Code]</a>&ensp;
+	  <a href="https://huggingface.co/collections/liminho123/statistical-learning-theory-in-lean-4">[HF Dataset]</a>&ensp;
 	</p>
 
     <p>
@@ -118,6 +119,7 @@
       <br/>
       <a href="docs/dag_math_pdf.pdf">[PDF]</a>&ensp;
       <a href="https://github.com/YuanheZ/DAG-MATH-Formatted-CoT">[Code]</a>&ensp;
+	  <a href="https://huggingface.co/datasets/liminho123/DAG-MATH-Formatted-CoT">[HF Dataset]</a>&ensp;
 	</p>
 
     <p>
