--- a/index.html
+++ b/index.html
@@ -104,6 +104,17 @@
       <a href="docs/lean4-slt.pdf">[PDF]</a>&ensp;
       <a href="https://github.com/YuanheZ/lean-stat-learning-theory">[Code]</a>&ensp;
 	  <a href="https://huggingface.co/collections/liminho123/statistical-learning-theory-in-lean-4">[HF Dataset]</a>&ensp;
+	  <a href="javascript:toggle('zhang2025loraoneonestepgradientsuffice_wrap');">[Bibtex]</a>&ensp;
+      <div id="zhang2025loraoneonestepgradientsuffice_wrap" class="bibpanel">
+	<PRE id="zhang2025loraoneonestepgradientsuffice">
+@article{zhang2026statistical,
+  title={Statistical Learning Theory in Lean 4: Empirical Processes from Scratch},
+  author={Zhang, Yuanhe and Lee, Jason D and Liu, Fanghui},
+  journal={arXiv preprint arXiv:2602.02285},
+  year={2026}
+}</PRE>
+	<button onclick="copyBibliography('zhang2025loraoneonestepgradientsuffice')">Copy</button>
+      </div>
 	</p>
 
     <p>
@@ -120,6 +131,17 @@
       <a href="docs/dag_math_pdf.pdf">[PDF]</a>&ensp;
       <a href="https://github.com/YuanheZ/DAG-MATH-Formatted-CoT">[Code]</a>&ensp;
 	  <a href="https://huggingface.co/datasets/liminho123/DAG-MATH-Formatted-CoT">[HF Dataset]</a>&ensp;
+	  <a href="javascript:toggle('zhang2025loraoneonestepgradientsuffice_wrap');">[Bibtex]</a>&ensp;
+      <div id="zhang2025loraoneonestepgradientsuffice_wrap" class="bibpanel">
+	<PRE id="zhang2025loraoneonestepgradientsuffice">
+@article{zhang2025dag,
+  title={DAG-Math: Graph-Guided Mathematical Reasoning in LLMs},
+  author={Zhang, Yuanhe and Kuzborskij, Ilja and Lee, Jason D and Leng, Chenlei and Liu, Fanghui},
+  journal={arXiv preprint arXiv:2510.19842},
+  year={2025}
+}</PRE>
+	<button onclick="copyBibliography('zhang2025loraoneonestepgradientsuffice')">Copy</button>
+      </div>
 	</p>
 
     <p>
@@ -141,16 +163,20 @@
       <a href="javascript:toggle('zhang2025loraoneonestepgradientsuffice_wrap');">[Bibtex]</a>&ensp;
       <div id="zhang2025loraoneonestepgradientsuffice_wrap" class="bibpanel">
 	<PRE id="zhang2025loraoneonestepgradientsuffice">
-@misc{zhang2025loraoneonestepgradientsuffice,
-      title={LoRA-One: One-Step Full Gradient Could Suffice for Fine-Tuning Large Language Models,
-      Provably and Efficiently}, 
-      author={Yuanhe Zhang and Fanghui Liu and Yudong Chen},
-      year={2025},
-      eprint={2502.01235},
-      archivePrefix={arXiv},
-      primaryClass={stat.ML},
-      url={https://arxiv.org/abs/2502.01235}, 
-}</PRE>
+@InProceedings{pmlr-v267-zhang25ax,
+  title = 	 {{L}o{RA}-One: One-Step Full Gradient Could Suffice for Fine-Tuning Large Language Models, Provably and Efficiently},
+  author =       {Zhang, Yuanhe and Liu, Fanghui and Chen, Yudong},
+  booktitle = 	 {Proceedings of the 42nd International Conference on Machine Learning},
+  pages = 	 {75513--75574},
+  year = 	 {2025},
+  editor = 	 {Singh, Aarti and Fazel, Maryam and Hsu, Daniel and Lacoste-Julien, Simon and Berkenkamp, Felix and Maharaj, Tegan and Wagstaff, Kiri and Zhu, Jerry},
+  volume = 	 {267},
+  series = 	 {Proceedings of Machine Learning Research},
+  month = 	 {13--19 Jul},
+  publisher =    {PMLR},
+  url = 	 {https://proceedings.mlr.press/v267/zhang25ax.html},
+}
+</PRE>
 	<button onclick="copyBibliography('zhang2025loraoneonestepgradientsuffice')">Copy</button>
       </div>
 
