--- a/index.html
+++ b/index.html
@@ -104,16 +104,16 @@
       <a href="docs/lean4-slt.pdf">[PDF]</a>&ensp;
       <a href="https://github.com/YuanheZ/lean-stat-learning-theory">[Code]</a>&ensp;
 	  <a href="https://huggingface.co/collections/liminho123/statistical-learning-theory-in-lean-4">[HF Dataset]</a>&ensp;
-	  <a href="javascript:toggle('zhang2025loraoneonestepgradientsuffice_wrap');">[Bibtex]</a>&ensp;
-      <div id="zhang2025loraoneonestepgradientsuffice_wrap" class="bibpanel">
-	<PRE id="zhang2025loraoneonestepgradientsuffice">
+	  <a href="javascript:toggle('zhang2026statistical_wrap');">[Bibtex]</a>&ensp;
+      <div id="zhang2026statistical_wrap" class="bibpanel">
+	<PRE id="zhang2026statistical">
 @article{zhang2026statistical,
   title={Statistical Learning Theory in Lean 4: Empirical Processes from Scratch},
   author={Zhang, Yuanhe and Lee, Jason D and Liu, Fanghui},
   journal={arXiv preprint arXiv:2602.02285},
   year={2026}
 }</PRE>
-	<button onclick="copyBibliography('zhang2025loraoneonestepgradientsuffice')">Copy</button>
+	<button onclick="copyBibliography('zhang2026statistical')">Copy</button>
       </div>
 	</p>
 
@@ -131,16 +131,16 @@
       <a href="docs/dag_math_pdf.pdf">[PDF]</a>&ensp;
       <a href="https://github.com/YuanheZ/DAG-MATH-Formatted-CoT">[Code]</a>&ensp;
 	  <a href="https://huggingface.co/datasets/liminho123/DAG-MATH-Formatted-CoT">[HF Dataset]</a>&ensp;
-	  <a href="javascript:toggle('zhang2025loraoneonestepgradientsuffice_wrap');">[Bibtex]</a>&ensp;
-      <div id="zhang2025loraoneonestepgradientsuffice_wrap" class="bibpanel">
-	<PRE id="zhang2025loraoneonestepgradientsuffice">
+	  <a href="javascript:toggle('zhang2025dag_wrap');">[Bibtex]</a>&ensp;
+      <div id="zhang2025dag_wrap" class="bibpanel">
+	<PRE id="zhang2025dag">
 @article{zhang2025dag,
   title={DAG-Math: Graph-Guided Mathematical Reasoning in LLMs},
   author={Zhang, Yuanhe and Kuzborskij, Ilja and Lee, Jason D and Leng, Chenlei and Liu, Fanghui},
   journal={arXiv preprint arXiv:2510.19842},
   year={2025}
 }</PRE>
-	<button onclick="copyBibliography('zhang2025loraoneonestepgradientsuffice')">Copy</button>
+	<button onclick="copyBibliography('zhang2025dag')">Copy</button>
       </div>
 	</p>
 
