--- a/index.html
+++ b/index.html
@@ -160,16 +160,17 @@
 
       <a href="https://arxiv.org/pdf/2502.01235">[PDF]</a>&ensp;
       <a href="https://github.com/YuanheZ/LoRA-One">[Code]</a>&ensp;
+	  <a href="https://yuanhez.github.io/loraoneofficial">[Website]</a>&ensp;
       <a href="javascript:toggle('zhang2025loraoneonestepgradientsuffice_wrap');">[Bibtex]</a>&ensp;
       <div id="zhang2025loraoneonestepgradientsuffice_wrap" class="bibpanel">
 	<PRE id="zhang2025loraoneonestepgradientsuffice">
 @InProceedings{pmlr-v267-zhang25ax,
-  title = 	 {{L}o{RA}-One: One-Step Full Gradient Could Suffice for Fine-Tuning Large Language Models, Provably and Efficiently},
+  title = 	 {{L}o{RA}-One: One-Step Full Gradient Could Suffice for Fine-Tuning 
+		Large Language Models, Provably and Efficiently},
   author =       {Zhang, Yuanhe and Liu, Fanghui and Chen, Yudong},
   booktitle = 	 {Proceedings of the 42nd International Conference on Machine Learning},
   pages = 	 {75513--75574},
   year = 	 {2025},
-  editor = 	 {Singh, Aarti and Fazel, Maryam and Hsu, Daniel and Lacoste-Julien, Simon and Berkenkamp, Felix and Maharaj, Tegan and Wagstaff, Kiri and Zhu, Jerry},
   volume = 	 {267},
   series = 	 {Proceedings of Machine Learning Research},
   month = 	 {13--19 Jul},
