--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
 	  <a href="https://arxiv.org/abs/2602.02285">
 	<b>Statistical Learning Theory in Lean 4: Empirical Processes from Scratch</b>
       </a>
+	  <div style="text-align: center; margin-top: 1em;">
+        <img src="img/level-2.jpg" alt="Lean4-SLT" style="max-width: 80%; height: auto;"/>
+      </div>
       <br/>
       Yuanhe Zhang, <a href="https://jasondlee88.github.io" target="_blank">Jason D. Lee</a>, Fanghui Liu
 	  </a>
@@ -122,6 +125,9 @@
       <a href="https://arxiv.org/abs/2510.19842">
 	<b>DAG-Math: Graph-Guided Mathematical Reasoning in LLMs</b>
       </a>
+	  <div style="text-align: center; margin-top: 1em;">
+        <img src="img/auc_tripanel.jpg" alt="DAG-MATH" style="max-width: 80%; height: auto;"/>
+      </div>
       <br/>
       Yuanhe Zhang, <a href="https://iljaku.github.io" target="_blank">Ilja Kuzborskij</a>, <a href="https://jasondlee88.github.io" target="_blank">Jason D. Lee</a>, Chenlei Leng, Fanghui Liu
 	  </a>
