--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 	<b>DAG-Math: Graph-Guided Mathematical Reasoning in LLMs</b>
       </a>
 	  <div style="text-align: center; margin-top: 1em;">
-        <img src="img/auc_tripanel.jpg" alt="DAG-MATH" style="max-width: 100%; height: auto;"/>
+        <img src="img/dag_display.jpg" alt="DAG-MATH" style="max-width: 80%; height: auto;"/>
       </div>
       <br/>
       Yuanhe Zhang, <a href="https://iljaku.github.io" target="_blank">Ilja Kuzborskij</a>, <a href="https://jasondlee88.github.io" target="_blank">Jason D. Lee</a>, Chenlei Leng, Fanghui Liu
