--- a/index.html
+++ b/index.html
@@ -104,13 +104,8 @@
 	  <br/>
 	  Preprint
       <br/>
-	  <a href="javascript:toggle('tzhang2026statistical_wrap');">[TLDR]</a>&ensp;
-      <div id="tzhang2026statistical_wrap" class="bibpanel">
-	  <PRE id="tzhang2026statistical">
-		We present the first comprehensive Lean 4 formalization of statistical learning theory (SLT) grounded in empirical process theory from scratch. It includes High-Dimensional Gaussian Analysis Toolbox and Dudley’s Entropy Integral Bound.
-      </PRE>
-	  <button onclick="copyBibliography('tzhang2026statistical')">Copy</button>
-      </div>
+	  TLDR: We present the first comprehensive Lean 4 formalization of statistical learning theory (SLT) grounded in empirical process theory from scratch. It includes High-Dimensional Gaussian Analysis Toolbox and Dudley’s Entropy Integral Bound.
+      <br/>
       <a href="docs/lean4-slt.pdf">[PDF]</a>&ensp;
       <a href="https://github.com/YuanheZ/lean-stat-learning-theory">[Code]</a>&ensp;
 	  <a href="https://huggingface.co/collections/liminho123/statistical-learning-theory-in-lean-4">[HF Dataset]</a>&ensp;
@@ -141,13 +136,8 @@
 	  <br/>
 	  International Conference on Learning Representations (ICLR), 2026
       <br/>
-	  <a href="javascript:toggle('tzhang2025dag_wrap');">[TLDR]</a>&ensp;
-      <div id="tzhang2025dag_wrap" class="bibpanel">
-	  <PRE id="tzhang2025dag">
-		Different from natural languages and formal proof systems, we propose a new pipeline by modeling CoT on directed acyclic graphs (DAGs), introduce the concept of logic closeness, and then precisely evaluates the mathematical reasoning ability of LLMs via the proposed DAG-MATH format.
-      </PRE>
-	  <button onclick="copyBibliography('tzhang2025dag')">Copy</button>
-      </div>
+	  TLDR: We propose a new framework by modeling CoT on directed acyclic graphs (DAGs), introduce the concept of logic closeness, and then precisely evaluates the mathematical reasoning ability of LLMs via the proposed DAG-MATH format.
+      <br/>
       <a href="docs/dag_math_pdf.pdf">[PDF]</a>&ensp;
       <a href="https://github.com/YuanheZ/DAG-MATH-Formatted-CoT">[Code]</a>&ensp;
 	  <a href="https://huggingface.co/datasets/liminho123/DAG-MATH-Formatted-CoT">[HF Dataset]</a>&ensp;
@@ -178,13 +168,8 @@
       International Conference on Machine Learning (<a href="https://icml.cc/Conferences/2025">ICML</a>), 2025
       <em>(Oral, top 120/12107=1.0% of papers)</em>.<br/>
 
-	  <a href="javascript:toggle('tzhang2025loraoneonestepgradientsuffice_wrap');">[TLDR]</a>&ensp;
-      <div id="tzhang2025loraoneonestepgradientsuffice_wrap" class="bibpanel">
-	  <PRE id="tzhang2025loraoneonestepgradientsuffice">
-		We show how theory (from subspace alignment to gradient dynamics as well as preconditioners) contributes to fine-tuning algorithm design in practice.
-      </PRE>
-	  <button onclick="copyBibliography('tzhang2025loraoneonestepgradientsuffice')">Copy</button>
-      </div>
+	  TLDR: We show how theory (from subspace alignment to gradient dynamics as well as preconditioners) contributes to fine-tuning algorithm design in practice.
+      <br/>
       <a href="https://arxiv.org/pdf/2502.01235">[PDF]</a>&ensp;
       <a href="https://github.com/YuanheZ/LoRA-One">[Code]</a>&ensp;
 	  <a href="https://yuanhez.github.io/loraoneofficial">[Website]</a>&ensp;
