--- a/index.html
+++ b/index.html
@@ -120,7 +120,9 @@
       </div>
 	  <br/>
 
-	  TLDR: We present the first comprehensive Lean 4 formalization of statistical learning theory (SLT) grounded in empirical process theory from scratch. It includes High-Dimensional Gaussian Analysis Toolbox and Dudley’s Entropy Integral Bound.
+	  <br/>
+
+	  <b>TLDR:</b> We present the first comprehensive Lean 4 formalization of statistical learning theory (SLT) grounded in empirical process theory from scratch. It includes High-Dimensional Gaussian Analysis Toolbox and Dudley’s Entropy Integral Bound.
 	</p>
 
     <p>
