--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
 	  <br/>
 
-	  <b>TLDR:</b> We present the first comprehensive Lean 4 formalization of statistical learning theory (SLT) grounded in empirical process theory from scratch. It includes High-Dimensional Gaussian Analysis Toolbox and Dudley’s Entropy Integral Bound.
+	  <b>TLDR:</b> We present the first large-scale Lean 4 formalization of statistical learning theory — ~30,000 lines of human-verified code, built from scratch through ~500 hours supervised agentic development. It covers scross High-Dimensional Gaussian Analysis Toolbox, Dudley’s Entropy Integral Bound, and sharp regression rates. Building upon our library, we present a high-quality Lean 4 training dataset for LLM's formal reasoning — 865 traced theorems, 18,669 tactic steps, ~300M tokens.
 	</p>
 
     <p>
@@ -139,8 +139,7 @@
 	  <br/>
 	  International Conference on Learning Representations (ICLR), 2026
       <br/>
-	  TLDR: We propose a new framework by modeling CoT on directed acyclic graphs (DAGs), introduce the concept of logic closeness, and then precisely evaluates the mathematical reasoning ability of LLMs via the proposed DAG-MATH format.
-      <br/>
+
       <a href="docs/dag_math_pdf.pdf">[PDF]</a>&ensp;
       <a href="https://github.com/YuanheZ/DAG-MATH-Formatted-CoT">[Code]</a>&ensp;
 	  <a href="https://huggingface.co/datasets/liminho123/DAG-MATH-Formatted-CoT">[HF Dataset]</a>&ensp;
@@ -155,6 +154,10 @@
 }</PRE>
 	<button onclick="copyBibliography('zhang2025dag')">Copy</button>
       </div>
+	  <br/>
+
+	  <br/>
+	   	<b>TLDR:</b> We propose a new framework by modeling CoT as a rule-based stochastic process on directed acyclic graphs (DAGs), introduce the concept of logic closeness, and then precisely evaluates the mathematical reasoning ability of LLMs via the proposed DAG-MATH format.
 	</p>
 
     <p>
@@ -171,8 +174,6 @@
       International Conference on Machine Learning (<a href="https://icml.cc/Conferences/2025">ICML</a>), 2025
       <em>(Oral, top 120/12107=1.0% of papers)</em>.<br/>
 
-	  TLDR: We show how theory (from subspace alignment to gradient dynamics as well as preconditioners) contributes to fine-tuning algorithm design in practice.
-      <br/>
       <a href="https://arxiv.org/pdf/2502.01235">[PDF]</a>&ensp;
       <a href="https://github.com/YuanheZ/LoRA-One">[Code]</a>&ensp;
 	  <a href="https://yuanhez.github.io/loraoneofficial">[Website]</a>&ensp;
@@ -195,7 +196,11 @@
 </PRE>
 	<button onclick="copyBibliography('zhang2025loraoneonestepgradientsuffice')">Copy</button>
       </div>
+	  <br/>
 
+	  <br/>
+
+	  <b>TLDR:</b> We show how theory (from subspace alignment to gradient dynamics as well as preconditioners) contributes to fine-tuning algorithm design in practice.
 <p>
       <a href="https://arxiv.org/abs/2406.12764">
 	<b>Quasi-Bayes meets Vines</b>
