--- a/index.html
+++ b/index.html
@@ -120,9 +120,7 @@
       </div>
 	  <br/>
 
-	  <br/>
-
-	  <b>TLDR:</b> We present the first large-scale Lean 4 formalization of statistical learning theory — ~30,000 lines of human-verified code, built from scratch through ~500 hours supervised agentic development. It covers scross High-Dimensional Gaussian Analysis Toolbox, Dudley’s Entropy Integral Bound, and sharp regression rates. Building upon our library, we present a high-quality Lean 4 training dataset for LLM's formal reasoning — 865 traced theorems, 18,669 tactic steps, ~300M tokens.
+	  <b>TLDR:</b> We present the first large-scale Lean 4 formalization of statistical learning theory, built from scratch through ~500 hours supervised agentic development. It covers scross High-Dimensional Gaussian Analysis Toolbox, Dudley’s Entropy Integral Bound, and sharp regression rates. Building upon our library, we present a high-quality Lean 4 training dataset for LLM's formal reasoning, which contains 865 traced theorems, 18,669 tactic steps, ~300M tokens.
 	</p>
 
     <p>
@@ -156,8 +154,7 @@
       </div>
 	  <br/>
 
-	  <br/>
-	   	<b>TLDR:</b> We propose a new framework by modeling CoT as a rule-based stochastic process on directed acyclic graphs (DAGs), introduce the concept of logic closeness, and then precisely evaluates the mathematical reasoning ability of LLMs via the proposed DAG-MATH format.
+	  <b>TLDR:</b> We propose a new framework by modeling CoT as a rule-based stochastic process on directed acyclic graphs (DAGs), introduce the concept of logic closeness, and then precisely evaluates the mathematical reasoning ability of LLMs via the proposed DAG-MATH format.
 	</p>
 
     <p>
@@ -196,8 +193,6 @@
 </PRE>
 	<button onclick="copyBibliography('zhang2025loraoneonestepgradientsuffice')">Copy</button>
       </div>
-	  <br/>
-
 	  <br/>
 
 	  <b>TLDR:</b> We show how theory (from subspace alignment to gradient dynamics as well as preconditioners) contributes to fine-tuning algorithm design in practice.
