--- a/index.html
+++ b/index.html
@@ -119,8 +119,9 @@
 	<button onclick="copyBibliography('zhang2026statistical')">Copy</button>
       </div>
 	  <br/>
-
-	  <b>TLDR:</b> We present the first large-scale Lean 4 formalization of statistical learning theory, built from scratch through ~500 hours supervised agentic development. It covers scross High-Dimensional Gaussian Analysis Toolbox, Dudley’s Entropy Integral Bound, and sharp regression rates. Building upon our library, we present a high-quality Lean 4 training dataset for LLM's formal reasoning, which contains 865 traced theorems, 18,669 tactic steps, ~300M tokens.
+      <span style="color: lightblue;">
+	    <b>TLDR:</b> We present the first large-scale Lean 4 formalization of statistical learning theory (SLT) grounded in empirical process theory from scratch. It covers scross High-Dimensional Gaussian Analysis Toolbox, Dudley’s Entropy Integral Bound, and sharp regression rates. Building upon our library, we present a high-quality Lean 4 training dataset for LLM's formal reasoning.
+	  </span>
 	</p>
 
     <p>
@@ -154,7 +155,9 @@
       </div>
 	  <br/>
 
-	  <b>TLDR:</b> We propose a new framework by modeling CoT as a rule-based stochastic process on directed acyclic graphs (DAGs), introduce the concept of logic closeness, and then precisely evaluates the mathematical reasoning ability of LLMs via the proposed DAG-MATH format.
+      <span style="color: lightblue;">
+	    <b>TLDR:</b> We propose a new framework by modeling CoT as a rule-based stochastic process on directed acyclic graphs (DAGs), introduce the concept of logic closeness, and then precisely evaluates the mathematical reasoning ability of LLMs via the proposed DAG-MATH format.
+	  </span>
 	</p>
 
     <p>
@@ -195,7 +198,9 @@
       </div>
 	  <br/>
 
-	  <b>TLDR:</b> We show how theory (from subspace alignment to gradient dynamics as well as preconditioners) contributes to fine-tuning algorithm design in practice.
+	  <span style="color: lightblue;">
+	    <b>TLDR:</b> We show how theory (from subspace alignment to gradient dynamics as well as preconditioners) contributes to fine-tuning algorithm design in practice.
+	  </span>
 <p>
       <a href="https://arxiv.org/abs/2406.12764">
 	<b>Quasi-Bayes meets Vines</b>
