--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 	<button onclick="copyBibliography('zhang2026statistical')">Copy</button>
       </div>
 	  <br/>
-      <span style="color: lightblue;">
+      <span style="color: #4A90E2;">
 	    <b>TLDR:</b> We present the first large-scale Lean 4 formalization of statistical learning theory (SLT) grounded in empirical process theory from scratch. It covers scross High-Dimensional Gaussian Analysis Toolbox, Dudley’s Entropy Integral Bound, and sharp regression rates. Building upon our library, we present a high-quality Lean 4 training dataset for LLM's formal reasoning.
 	  </span>
 	</p>
@@ -155,7 +155,7 @@
       </div>
 	  <br/>
 
-      <span style="color: lightblue;">
+      <span style="color: #4A90E2;">
 	    <b>TLDR:</b> We propose a new framework by modeling CoT as a rule-based stochastic process on directed acyclic graphs (DAGs), introduce the concept of logic closeness, and then precisely evaluates the mathematical reasoning ability of LLMs via the proposed DAG-MATH format.
 	  </span>
 	</p>
@@ -198,7 +198,7 @@
       </div>
 	  <br/>
 
-	  <span style="color: lightblue;">
+	  <span style="color: #4A90E2;">
 	    <b>TLDR:</b> We show how theory (from subspace alignment to gradient dynamics as well as preconditioners) contributes to fine-tuning algorithm design in practice.
 	  </span>
 <p>
